# EDR

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: ci.yml
docs/: architecture.md  data_schema.md  threat_model.md
src/: cli.rs  config.rs  lib.rs  main.rs
src/collectors/: mod.rs  network.rs  persistence.rs  process.rs
src/database/: migrations.rs  mod.rs
src/hunts/: mod.rs  rules.rs
tests/: hunt_tests.rs
